--- a/save.html
+++ b/save.html
@@ -1506,18 +1506,21 @@
         });
 
         let mods = 0,
-            state = [];
+            state = [],
+            additionalProperties = [
+                'hasControls',
+            ];
             
         function stringifyCanvas(canvas){
                 try {
                     sCanvas = JSON.stringify(canvas);
                     oCanvas = JSON.parse(sCanvas);
 
-                    // $.each(oCanvas.objects, function(n, object) {
-                    //     $.each(additionalProperties, function(m, field) {
-                    //         oCanvas.objects[n][field] = canvas.item(n)[field];
-                    //     });
-                    // });
+                    $.each(oCanvas.objects, function(n, object) {
+                        $.each(additionalProperties, function(m, field) {
+                            oCanvas.objects[n][field] = canvas.item(n)[field];
+                        });
+                    });
                 
                     return JSON.stringify(oCanvas);
                 } catch (error) {
@@ -1553,8 +1556,6 @@
             if (!obj) {
                 return;
             }
-
-            console.log(1);
             updateModifications();
         });
 
