--- a/index.html
+++ b/index.html
@@ -1120,7 +1120,8 @@
                     return;
                 }
                 
-                const json = stringifyCanvas(canvas);
+                // const json = stringifyCanvas(canvas);
+                const json = canvas.toJSON(additionalProperties);
 
                 if (mods === 0) {
                     state.push(json);
@@ -1171,7 +1172,7 @@
         function Copy() {
             canvas.getActiveObject().clone(function(cloned) {
                 _clipboard = cloned;
-            });
+            }, additionalProperties);
         }
 
         function Paste() {
@@ -1201,7 +1202,7 @@
                 canvas.setActiveObject(clonedObj);
                 canvas.requestRenderAll();
                 updateModifications();
-            });
+            },additionalProperties);
         }
 
         function controlsForObject(_this, value){
