--- a/index.html
+++ b/index.html
@@ -1072,10 +1072,11 @@
         }
 
         function returnToWbForm(){
+            $('#fileUpload').click();
             $('#rec387249820').show();
             $('#our-demo').addClass('d-none');
         }
-
+        #rec388162706
         // document.querySelector('#form387249820 button').addEventListener('click',function(e){
         //     let value = $('#form387249820 > div.t-container > div.t-col.t-col_8.t-prefix_2 > div.t186__wrapper > div.t186__blockinput > input').val();
         //     loadWBPhoto(value);
